# pythermiagenesis

./: README.md  example.py  examplewrite.py  pyproject.toml  setup.py
pythermiagenesis/: __init__.py  client.py  const.py
